# aigency-router-v2

./: .dockerignore  .env.example  .gitignore  .repoatlas.json  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  debug-heal.ts  debug-test3.ts  debug-test3b.ts  docker-compose.yml  iii.config.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/hooks/: icm.json
.wrangler/cache/: wrangler-account.json
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
aigency-router-v2/.iii/: project.ini
dashboard/: index.html  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/src/: App.tsx
deploy/caddy/: Caddyfile
docs/: M002-M003-AUDIT-2026-06-25.md  OPERATIONS.md
docs/agile-context/: 00_AIGENCY_OS_PROJECT_BRIEF.md  01_AIGENCY_OS_PRD.md  02_AIGENCY_OS_ARCHITECTURE.md  03_AIGENCY_OS_ARCHITECTURE_C4.md  04_AIGENCY_OS_UI-UX.md
iii-engine/: README.md  package-lock.json  package.json  tsconfig.json
iii-engine/src/: engine.test.ts  engine.ts  gateway-integration.test.ts  http-handler.ts  protocol.md  sdk-integration.test.ts  smoke.test.ts
iii-sdk/: package.json  tsconfig.json
iii-sdk/src/: index.test-d.ts  index.ts  state.ts  stream.ts
scripts/: fetch-bonsai.sh  parallel-start.sh  verify-s01.sh  verify-s02.sh  verify-s05.sh  verify-s06.sh
tests/integration/: package.json  test-aider-patterns.py  test-bonsai-classifier.py  test-claude-code-patterns.ts  test-cli-agent-sdk.ts  test-cost-reporting.ts  test-cross-worker.ts  test-docker-compose-stack.sh  test-engram-pipeline.ts  test-gateway-pipeline.ts  test-heal-flow.ts  test-observability-dashboard.ts  test-offload-flow.ts  test-rate-limiting-and-admin-auth.ts  test-sdk-examples-validation.ts  test-tier-discovery.ts  test-vault-integration.ts  test-zero-cost-enforcement.ts  test_cross_worker.py
tui/: .pdm-python  pyproject.toml
tui/src/: __init__.py  app.py  cli.py  crypto.py  db.py
tui/tests/: test_crypto.py
tui/voltron_tui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
wiki/: AGENTS.md  catalogue.md  index.md  llms-full.txt  llms.txt
wiki/.vitepress/: config.ts
wiki/01-getting-started/: overview.md  quick-reference.md  setup.md
wiki/onboarding/: contributor.md  executive.md  product-manager.md  staff-engineer.md
workers/agents/sdk/python/: pyproject.toml
workers/agents/sdk/python/aigency_sdk/: __init__.py  client.py  monitoring.py  types.py
workers/agents/sdk/python/examples/aider/: README.md  config.example.yaml
workers/agents/sdk/python/tests/: test_client.py
workers/brain/: .pdm-python  pyproject.toml  requirements.txt
workers/brain/src/: heuristic_selector.py  llamacpp_selector.py  main.py  selector.py  test_brain.py
workers/engram/: package-lock.json  package.json
workers/gateway/: package.json
workers/provider-clients/: package-lock.json  package.json  tsconfig.json
workers/selector/: package.json
workers/shared/: cluster-discovery.test.ts  cluster-discovery.ts  cluster-registry.test.ts  cluster-registry.ts  llama-client.test.ts  (+10 more)
(+147 files in other folders)
