[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "brain-worker"
version = "0.1.0"
description = "iii brain worker — AI classification and routing decisions"
requires-python = ">=3.12"
dependencies = ["iii-sdk>=0.17.0", "llama-cpp-python>=0.3.31"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["src"]
asyncio_mode = "auto"

[tool.pdm]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
