[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aigency-sdk"
version = "0.1.0"
description = "OpenAI-compatible Python SDK for the Aigency Router"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
